# exercises_console_cmake-3.26-c-23.0

./: CMakeLists.txt  main.c
exercises/: exercise_1.c  exercise_10.c  exercise_11.c  exercise_12.c  exercise_13.c  exercise_14.c  exercise_15.c  exercise_16.c  exercise_17.c  exercise_18.c  exercise_19.c  exercise_2.c  exercise_20.c  exercise_21.c  exercise_22.c  exercise_23.c  exercise_24.c  exercise_25.c  exercise_26.c  exercise_27.c  exercise_28.c  exercise_29.c  exercise_3.c  exercise_30.c  exercise_31.c  exercise_32.c  exercise_33.c  exercise_34.c  exercise_35.c  exercise_36.c  exercise_37.c  exercise_38.c  exercise_39.c  exercise_4.c  exercise_40.c  exercise_41.c  exercise_42.c  exercise_43.c  exercise_44.c  exercise_45.c  (+13 more)
