cmake_minimum_required(VERSION 3.26)
project(exercises_console_cmake_3_26_c_23_0 C)

set(CMAKE_C_STANDARD 23)

add_executable(exercises_console_cmake_3_26_c_23_0 main.c
        exercises/exercise_1.c
        exercises/exercise_2.c
        exercises/exercise_3.c
        exercises/exercise_4.c
        exercises/exercise_5.c
        exercises/exercise_6.c
        exercises/exercise_7.c
        exercises/exercise_8.c
        exercises/exercise_9.c
        exercises/exercise_10.c
        exercises/exercise_11.c)
