cmake_minimum_required(VERSION 3.26)
project(exercises_console_cmake_3_26_c_23_0 C)

set(CMAKE_C_STANDARD 23)

add_executable(exercises_console_cmake_3_26_c_23_0 main.c
        exercises/exercise_1.c
        exercises/exercise_2.c
        exercises/exercise_3.c
        exercises/exercise_4.c
        exercises/exercise_5.c
        exercises/exercise_6.c
        exercises/exercise_7.c
        exercises/exercise_8.c
        exercises/exercise_9.c
        exercises/exercise_10.c
        exercises/exercise_11.c
        exercises/exercise_12.c
        exercises/exercise_13.c
        exercises/exercise_14.c
        exercises/exercise_15.c
        exercises/exercise_16.c
        exercises/exercise_17.c
        exercises/exercise_18.c
        exercises/exercise_19.c
        exercises/exercise_20.c
        exercises/exercise_21.c
        exercises/exercise_22.c
        exercises/exercise_23.c
        exercises/exercise_24.c
        exercises/exercise_25.c
        exercises/exercise_26.c
        exercises/exercise_27.c
        exercises/exercise_28.c
        exercises/exercise_29.c
        exercises/exercise_30.c
        exercises/exercise_31.c
        exercises/exercise_32.c
        exercises/exercise_33.c
        exercises/exercise_34.c
        exercises/exercise_35.c
        exercises/exercise_36.c
        exercises/exercise_37.c
        exercises/exercise_38.c
        exercises/exercise_39.c
        exercises/exercise_40.c
        exercises/exercise_41.c
        exercises/exercise_42.c
        exercises/exercise_43.c
        exercises/exercise_44.c
        exercises/exercise_45.c
        exercises/exercise_46.c
        exercises/exercise_47.c
        exercises/exercise_48.c
        exercises/exercise_49.c
        exercises/exercise_50.c
        exercises/exercise_51.c
        exercises/exercise_52.c
        exercises/exercise_53.c)
